# WinMiniSynth

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  README.md  USER_GUIDE.md
src/: __init__.py  __main__.py  app_controller.py  main.py
src/effects/: __init__.py  chorus.py  delay.py  distortion.py  flanger.py  reverb.py
src/gui/: __init__.py  chorus_panel.py  controls_panel.py  delay_panel.py  distortion_panel.py  flanger_panel.py  keyboard_widget.py  main_window.py  metronome_panel.py  recording_panel.py  reverb_panel.py  song_player_panel.py  styles.py
src/recording/: __init__.py  file_export.py  metronome.py  preset_storage.py  recorder.py
src/songs/: __init__.py  demo_songs.py  player.py  song.py
src/synth/: __init__.py  engine.py  envelope.py  filter.py  lfo.py  oscillator.py  synth.py  voice.py
src/visualization/: __init__.py  filter_curve.py  oscilloscope.py  panel.py
tests/: __init__.py  conftest.py  test_app_controller.py  test_controls_panel.py  test_effects_validation.py  test_envelope.py  test_file_export.py  test_filter.py  test_filter_curve.py  test_gui_effect_wiring.py  test_gui_styles.py  test_integration.py  test_keyboard_widget.py  test_lfo.py  test_main_window.py  test_metronome.py  test_metronome_panel.py  test_oscillator.py  test_oscilloscope.py  test_preset_storage.py  test_recorder.py  test_recording_panel.py  test_synth.py  test_visualization_panel.py  test_voice.py
tests/effects/: __init__.py  test_chorus.py  test_delay.py  test_distortion.py  test_reverb.py
tests/songs/: __init__.py  test_song_player.py
